TM-11225 Fix issue aligning footer bottons

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -30,6 +30,8 @@
       min-height: 890px
     .modal-body
       height: 86%
+      .k-grid-header.k-grid-dynamic-header
+        position: relative
       form.create-form
         td.description-container
           max-width: 100%
@@ -222,6 +224,8 @@
             padding-right: 6px
     .modal-footer
       padding: 15px 18px
+      .action-button
+        padding-right: 5px
 
   .successor-predecessor-table
     .k-grid-content
